Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12631

NetworkManager and ICD bearer plugins deadlock when configurations are updated

    XMLWordPrintable

Details

    • b0a33937851f56a1830141e519fd6ba21481e6c9

    Description

      Mutex are not always unlocked when signals are emitted, which can cause deadlocks if the connected slots call back into bearer code.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            amccarth Aaron McCarthy (closed Nokia identity) (Inactive)
            amccarth Aaron McCarthy (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes