Fix deadlocks in ICD and NetworkManager engines.

Ensure that locks are not held when signals are emitted.

Task-number: QTBUG-12631